--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -195,19 +195,13 @@ body {
 
 .store-items {
 	width: 100%;
+	display: flex;
 	flex-wrap: wrap;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	margin: auto;
 	padding: 0 20px;
-}
-
-.items-div {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
 }
 
 .container {
@@ -220,7 +214,7 @@ body {
 	filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
 	display: flex;
 	flex-direction: column;
-	width: auto;
+	width: 30%;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
@@ -237,7 +231,7 @@ body {
 	background-position: center;
 	background-size: cover;
 	height: 150px;
-	width: 100%;
+	/* width: 100%; */
 	border-radius: 12px;
 	border: 1px solid rgba(255, 255, 255, 0.255);
 }
