--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -214,7 +214,7 @@ body {
 	filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
 	display: flex;
 	flex-direction: column;
-	width: 30%;
+	width: 25%;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
@@ -226,12 +226,11 @@ body {
 	height: 100%;
 }
 
-.banner-image {
-	/* background-image: url(https://images.unsplash.com/photo-1641326201918-3cafc641038e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80); */
+.banner-image img {
 	background-position: center;
 	background-size: cover;
-	height: 150px;
-	/* width: 100%; */
+	background-repeat: no-repeat;
+	width: 40%;
 	border-radius: 12px;
 	border: 1px solid rgba(255, 255, 255, 0.255);
 }
@@ -241,16 +240,26 @@ body {
 	color: rgba(255, 255, 255, 0.98);
 	text-transform: uppercase;
 	font-size: 1.4rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
 }
 
 .image-desc {
-	color: #fff;
+	color: #ffffff;
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 	font-size: 0.7rem;
-	line-height: 100%;
+	line-height: 150%;
 	letter-spacing: 2px;
 	text-transform: uppercase;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
 
 .button-wrapper {
@@ -315,7 +324,7 @@ body {
 @media all and (min-width: 768px) {
 	.chat-thread {
 		width: 70%;
-		height: 600px;
+		height: 650px;
 	}
 
 	.chat-window {
