--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -67,7 +67,7 @@ body {
 	clear: both;
 	display: flex;
 	justify-content: center;
-	width: 30%;
+	width: 50%;
 	margin: auto;
 	margin-bottom: 20px;
 	padding: 8px 10px 8px 5px;
@@ -176,6 +176,16 @@ body {
 .chat-window {
 	position: fixed;
 	bottom: 18px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.chat-window h6 a {
+	color: #0ad5c1;
+	text-decoration: none;
+	font: 16px/24px 'Noto Sans', sans-serif;
+	margin: 0;
 }
 
 .chat-window-message {
