--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -4,6 +4,29 @@
 	}
 }
 
+body {
+	padding: 0;
+	margin: 0;
+	background: -moz-linear-gradient(
+		-45deg,
+		#183850 0,
+		#183850 25%,
+		#192c46 50%,
+		#22254c 75%,
+		#22254c 100%
+	);
+	background: -webkit-linear-gradient(
+		-45deg,
+		#183850 0,
+		#183850 25%,
+		#192c46 50%,
+		#22254c 75%,
+		#22254c 100%
+	);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+
 .card-registration
 	.select-input.form-control[readonly]:not([disabled]) {
 	font-size: 1rem;
